--- a/examples/image_classification/index.html
+++ b/examples/image_classification/index.html
@@ -195,7 +195,7 @@
             <div class='col-lg-12 col-xs-12 text-center'>
               <figure class='item'>
                 <div class='inner'>
-                  <img id='image' crossorigin='anonymous' class='img-fluid' alt='Responsive image'
+                  <img id='feedElement' crossorigin='anonymous' class='img-fluid' alt='Responsive image'
                     src='./img/test.jpg'>
                 </div>
               </figure>
@@ -237,7 +237,7 @@
                 </svg>
               </i>
             </div>
-            <video id='video' autoplay playsinline></video>
+            <video id='feedMediaElement' autoplay playsinline></video>
           </div>
         </div>
 
@@ -356,8 +356,18 @@
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
   <script src='../static/lib/protobuf.min.js'></script>
+
+  <script src='../static/js/ui.common.js'></script>
+
   <script src='../../dist/webml-polyfill.js'></script>
+
   <script src='../util/base.js'></script>
+  <script src='../util/modelZoo.js'></script>
+  <script src='../util/baseRunner.js'></script>
+  <script src='../util/baseApp.js'></script>
+  <script src='../util/baseExample.js'></script>
+  <script src='../util/baseCameraExample.js'></script>
+
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
@@ -368,11 +378,11 @@
   <script src='../util/openvino/openvino.js'></script>
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
-  <script src='utils.js'></script>
-  <script src='../static/js/main.common.js'></script>
+
+  <script src='imageClassificationRunner.js'></script>
+  <script src='imageClassificationExample.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/ui.common.js'></script>
-  <script src='ui.js'></script>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
