--- a/examples/model.html
+++ b/examples/model.html
@@ -335,7 +335,7 @@
   <script src='static/lib/superfish/superfish.min.js'></script>
   <script src='static/lib/stickyjs/sticky.js'></script>
   <script src='../dist/webml-polyfill.js'></script>
-  <script src='util/base.js'></script>
+  <script src='util/modelZoo.js'></script>
   <script src='static/js/ui.common.js'></script>
   <script src='static/js/model.js'></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
