--- a/examples/super_resolution/index.html
+++ b/examples/super_resolution/index.html
@@ -202,7 +202,7 @@
             <div class='col-lg-12 col-xs-12 text-center'>
               <div class='row'>
                 <div class='col bt-3 mb-3'>
-                  <img id='image' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image'
+                  <img id='feedElement' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image'
                     src='./img/mushroom.png'>
                   <canvas id='inputCanvas'></canvas>
                   <h4>Low Resolution</h4>
@@ -330,17 +330,26 @@
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
   <script src='../static/lib/protobuf.min.js'></script>
+  <script src='../static/js/ui.common.js'></script>
+
   <script src='../../dist/webml-polyfill.js'></script>
+
   <script src='../util/base.js'></script>
+  <script src='../util/modelZoo.js'></script>
+  <script src='../util/baseRunner.js'></script>
+  <script src='../util/baseApp.js'></script>
+  <script src='../util/baseExample.js'></script>
+  <script src='../util/baseCameraExample.js'></script>
+
+
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
-  <script src='utils.js'></script>
-  <script src='../static/js/main.common.js'></script>
+
+  <script src='superResolutionExample.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/ui.common.js'></script>
-  <script src='ui.js'></script>
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
