--- a/examples/face_recognition/index.html
+++ b/examples/face_recognition/index.html
@@ -206,7 +206,7 @@
                   <canvas id='targetCanvasShow'></canvas>
                 </div>
                 <div class='col bt-3 mb-3'>
-                  <img id='searchImage' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image'
+                  <img id='feedElement' hidden crossorigin='anonymous' class='img-fluid' alt='Responsive image'
                     src='./img/searchImage.jpg'>
                   <canvas id='searchCanvasShow'></canvas>
                 </div>
@@ -226,8 +226,8 @@
                 </div>
                 <div class='col'>
                   <div class='box'>
-                    <input type='file' name='f[]' id='searchInput' accept='image/*' class='inputfile inputf' />
-                    <label for='searchInput'><svg width='20' height='17' viewBox='0 0 20 17'>
+                    <input type='file' name='f[]' id='input' accept='image/*' class='inputfile inputf' />
+                    <label for='input'><svg width='20' height='17' viewBox='0 0 20 17'>
                         <path
                           d='M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z' />
                         </svg>
@@ -298,7 +298,7 @@
 
   <canvas id='detecorCanvas'></canvas>
   <canvas id='recognitionCanvas'></canvas>
-  <video id='video' autoplay playsinline></video>
+  <video id='feedMediaElement' autoplay playsinline></video>
 
   <footer>
     <div class='container'>
@@ -374,8 +374,19 @@
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
   <script src='../static/lib/protobuf.min.js'></script>
+
+  <script src='../static/js/ui.common.js'></script>
+
   <script src='../../dist/webml-polyfill.js'></script>
+
   <script src='../util/base.js'></script>
+  <script src='../util/modelZoo.js'></script>
+  <script src='../util/baseRunner.js'></script>
+  <script src='../util/baseApp.js'></script>
+  <script src='../util/baseExample.js'></script>
+  <script src='../util/baseCameraExample.js'></script>
+  <script src='../util/faceDetectorRunner.js'></script>
+
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
@@ -386,12 +397,11 @@
   <script src='../util/decoders/SsdDecoder.js'></script>
   <script src='../util/decoders/Yolo2Decoder.js'></script>
   <script src='../util/faceDetector.js'></script>
-  <script src='DrawOutput.js'></script>
-  <script src='utils.js'></script>
-  <script src='../static/js/main.common.js'></script>
+
+  <script src='faceRecognitionExample.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/ui.common.js'></script>
-  <script src='ui.js'></script>
+
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
