--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -322,8 +322,8 @@
 
   <div id='overlay'></div>
 
-  <video id='video' autoplay playsinline></video>
-  <img id='image' crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='./img/woman.jpg'>
+  <video id='feedMediaElement' autoplay playsinline></video>
+  <img id='feedElement' crossorigin='anonymous' class='img-fluid' alt='Responsive image' src='./img/woman.jpg'>
 
   <a href='https://github.com/intel/webml-polyfill/' class='github-corner' aria-label='View source on GitHub'>
     <svg width='70' height='70' viewBox='0 0 250 250'
@@ -377,8 +377,20 @@
   <script src='../static/lib/greensock/tweenmax.js'></script>
   <script src='../static/lib/stats.customized.min.js'></script>
   <script src='../static/lib/iro.min.js'></script>
+
+  <script src='../static/js/ui.common.js'></script>
+
   <script src='../../dist/webml-polyfill.js'></script>
+
+
   <script src='../util/base.js'></script>
+  <script src='../util/modelZoo.js'></script>
+  <script src='../util/baseRunner.js'></script>
+  <script src='../util/baseApp.js'></script>
+  <script src='../util/baseExample.js'></script>
+  <script src='../util/baseCameraExample.js'></script>
+
+
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
@@ -387,11 +399,13 @@
   <script src='src/Shader.js'></script>
   <script src='src/GuidedFilter.js'></script>
   <script src='src/DrawOutputs.js'></script>
-  <script src='utils.js'></script>
-  <script src='../static/js/main.common.js'></script>
+
+
+  <script src='semanticSegmentationRunner.js'></script>
+  <script src='semanticSegmentationExample.js'></script>
   <script src='main.js'></script>
-  <script src='../static/js/ui.common.js'></script>
-  <script src='ui.js'></script>
+
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
