Add ultra_low_power tag for samples which support GNA

--- a/examples/asr_sample/index.html
+++ b/examples/asr_sample/index.html
@@ -108,6 +108,8 @@
                 <label id='l-sustained' for='sustained' class='lml'>SUSTAINED_SPEED</label>
                 <input type='radio' name='bw' class='d-none' id='low' value='low'>
                 <label id='l-low' for='low' class='lml'>LOW_POWER</label>
+                <input type='radio' name='bw' class='d-none' id='ultra_low' value='ultra_low'>
+                <label id='l-ultra_low' for='ultra_low' class='lml'>ULTRA_LOW_POWER</label>
               </div>
             </td>
           </tr>
