--- a/examples/speech_recognition/index.html
+++ b/examples/speech_recognition/index.html
@@ -6,10 +6,10 @@
   <title>Web Neural Network API - Examples - Automatic Speech Recognition Sample</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
   <meta
-    content='ASR Sample, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
+    content='Speech Recognition, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='keywords'>
   <meta
-    content='ASR Sample, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
+    content='Speech Recognition, WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='description'>
   <link rel='apple-touch-icon' sizes='57x57' href='../static/img/favicon/apple-icon-57x57.png'>
   <link rel='apple-touch-icon' sizes='60x60' href='../static/img/favicon/apple-icon-60x60.png'>
@@ -73,7 +73,7 @@
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='../speech_commands/'>Speech Commands</a></li>
-              <li><a href='../asr_sample/'>ASR Sample</a></li>
+              <li><a href='../speech_recognition/'>Speech Recognition</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
@@ -343,11 +343,6 @@
   <script src='../static/lib/protobuf.min.js'></script>
   <script src='../../dist/webml-polyfill.js'></script>
   <script src='../util/base.js'></script>
-  <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
-  <script src='../util/tflite/schema/schema_generated.js'></script>
-  <script src='../util/tflite/TfLiteModelUtils.js'></script>
-  <script src='../util/tflite/TFliteModelImporter.js'></script>
-  <script src='../util/onnx/onnx.js'></script>
   <script src='../util/openvino/openvino.js'></script>
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
