--- a/examples/semantic_segmentation/index.html
+++ b/examples/semantic_segmentation/index.html
@@ -385,10 +385,10 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseCameraExample.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseCameraExample.js'></script>
 
 
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
@@ -401,8 +401,8 @@
   <script src='src/DrawOutputs.js'></script>
 
 
-  <script src='semanticSegmentationRunner.js'></script>
-  <script src='semanticSegmentationExample.js'></script>
+  <script src='SemanticSegmentationRunner.js'></script>
+  <script src='SemanticSegmentationExample.js'></script>
   <script src='main.js'></script>
 
 
