--- a/examples/skeleton_detection/index.html
+++ b/examples/skeleton_detection/index.html
@@ -446,8 +446,8 @@
   <script src='src/decodePose.js'></script>
   <script src='src/DrawOutputs.js'></script>
 
-  <script src='skeletonDetectionRunner.js'></script>
-  <script src='skeletonDetectionExample.js'></script>
+  <script src='SkeletonDetectionRunner.js'></script>
+  <script src='SkeletonDetectionExample.js'></script>
   <script src='main.js'></script>
 
 
