--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -427,10 +427,10 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseMircophoneExample.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseMircophoneExample.js'></script>
 
   <script src='../util/mfcc/mfcc.js'></script>
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
@@ -442,8 +442,8 @@
   <script src='../util/openvino/OpenVINOModelUtils.js'></script>
   <script src='../util/openvino/OpenVINOModelImporter.js'></script>
 
-  <script src='speechCommandsRunner.js'></script>
-  <script src='speechCommandsExample.js'></script>
+  <script src='SpeechCommandsRunner.js'></script>
+  <script src='SpeechCommandsExample.js'></script>
   <script src='main.js'></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
