--- a/examples/face_recognition/index.html
+++ b/examples/face_recognition/index.html
@@ -381,11 +381,11 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseCameraExample.js'></script>
-  <script src='../util/faceDetectorRunner.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseCameraExample.js'></script>
+  <script src='../util/FaceDetectorRunner.js'></script>
 
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
@@ -398,7 +398,7 @@
   <script src='../util/decoders/Yolo2Decoder.js'></script>
   <script src='../util/faceDetector.js'></script>
 
-  <script src='faceRecognitionExample.js'></script>
+  <script src='FaceRecognitionExample.js'></script>
   <script src='main.js'></script>
 
 
