--- a/examples/facial_landmark_detection/index.html
+++ b/examples/facial_landmark_detection/index.html
@@ -327,10 +327,10 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseCameraExample.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseCameraExample.js'></script>
 
 
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
@@ -340,9 +340,9 @@
   <script src='../util/decoders/SsdDecoder.js'></script>
   <script src='../util/decoders/Yolo2Decoder.js'></script>
 
-  <script src='../util/faceDetectorRunner.js'></script>
+  <script src='../util/FaceDetectorRunner.js'></script>
 
-  <script src='facialLandmarkDetectionExample.js'></script>
+  <script src='FacialLandmarkDetectionExample.js'></script>
   <script src='main.js'></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
