--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -338,10 +338,10 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseCameraExample.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseCameraExample.js'></script>
 
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
   <script src='../util/tflite/schema/schema_generated.js'></script>
@@ -350,8 +350,8 @@
   <script src='../util/decoders/SsdDecoder.js'></script>
   <script src='../util/decoders/Yolo2Decoder.js'></script>
 
-  <script src='objectDetectionRunner.js'></script>
-  <script src='objectDetectionExample.js'></script>
+  <script src='ObjectDetectionRunner.js'></script>
+  <script src='ObjectDetectionExample.js'></script>
   <script src='main.js'></script>
 
 
