--- a/examples/super_resolution/index.html
+++ b/examples/super_resolution/index.html
@@ -336,10 +336,10 @@
 
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
-  <script src='../util/baseRunner.js'></script>
-  <script src='../util/baseApp.js'></script>
-  <script src='../util/baseExample.js'></script>
-  <script src='../util/baseCameraExample.js'></script>
+  <script src='../util/BaseRunner.js'></script>
+  <script src='../util/BaseApp.js'></script>
+  <script src='../util/BaseExample.js'></script>
+  <script src='../util/BaseCameraExample.js'></script>
 
 
   <script src='../util/tflite/flatbuffers/js/flatbuffers.js'></script>
@@ -347,7 +347,7 @@
   <script src='../util/tflite/TfLiteModelUtils.js'></script>
   <script src='../util/tflite/TFliteModelImporter.js'></script>
 
-  <script src='superResolutionExample.js'></script>
+  <script src='SuperResolutionExample.js'></script>
   <script src='main.js'></script>
 
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
