--- a/examples/super_resolution/index.html
+++ b/examples/super_resolution/index.html
@@ -337,6 +337,7 @@
   <script src='../util/base.js'></script>
   <script src='../util/modelZoo.js'></script>
   <script src='../util/BaseRunner.js'></script>
+  <script src='../util/WebNNRunner.js'></script>
   <script src='../util/BaseApp.js'></script>
   <script src='../util/BaseExample.js'></script>
   <script src='../util/BaseCameraExample.js'></script>
